<resources>
    <string name="app_name">MaterialLoginPage</string>
    <string name="top_icon">TOP ICON</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered? LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_details">Personal Details</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="notification_title">Notification Title</string>
    <string name="na">NA</string>

    <string-array name="notificationArray">
        <item> Nature 1 </item>
        <item> Nature 2 </item>
        <item> Nature 3 </item>
        <item> Nature 4 </item>
    </string-array>

    <string-array name="descriptionArray">
        <item> Description for Nature 1 </item>
        <item> Description for Nature 2 </item>
        <item> Description for Nature 3 </item>
        <item> Description for Nature 4 </item>
    </string-array>
</resources>
