<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:theme="@style/AppTheme">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/AppTheme">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/wave"
                    android:theme="@style/AppTheme" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="120dp"
                    android:layout_height="124dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/circle_shape"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="65"
                    android:progressDrawable="@drawable/circle_progress" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="75dp"
                    android:layout_height="93dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="85dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person" />
            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:gravity="top"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:theme="@style/AppTheme">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:theme="@style/AppTheme">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2.5dp"
                            app:cardBackgroundColor="@color/gray50"
                            app:cardCornerRadius="5dp">

                            <LinearLayout
                                android:id="@+id/linear_profile_fragment"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:theme="@style/AppTheme">

                                <TextView
                                    style="@style/cardTextPrimary"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:text="@string/personal_details"
                                    android:textColor="@color/black"
                                    android:textSize="22sp" />

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:focusedByDefault="false"
                                    android:padding="2dp">

                                    <EditText
                                        android:id="@+id/first_name_profile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:autofillHints=""
                                        android:enabled="false"
                                        android:focusedByDefault="false"
                                        android:hint="First Name"
                                        android:inputType="none"
                                        android:minHeight="50dp"
                                        android:textSize="20sp" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp">

                                    <EditText
                                        android:id="@+id/last_name_profile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:enabled="false"
                                        android:focusedByDefault="false"
                                        android:hint="Last name"
                                        android:inputType="none"
                                        android:minHeight="50dp"
                                        android:textSize="20sp" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp">

                                    <EditText
                                        android:id="@+id/dob_profile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:enabled="false"
                                        android:focusedByDefault="false"
                                        android:hint="Date Of Birth"
                                        android:inputType="none"
                                        android:maxLines="1"
                                        android:minHeight="50dp"
                                        android:textSize="20sp" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp">

                                    <EditText
                                        android:id="@+id/email_profile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:enabled="false"
                                        android:focusedByDefault="false"
                                        android:hint="@string/email"
                                        android:inputType="none"
                                        android:maxLines="1"
                                        android:minHeight="50dp"
                                        android:textSize="20sp" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp">

                                    <EditText
                                        android:id="@+id/phone_profile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:autofillHints=""
                                        android:enabled="false"
                                        android:focusedByDefault="false"
                                        android:hint="@string/phone"
                                        android:inputType="none"
                                        android:minHeight="50dp"
                                        android:textSize="20sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2.5dp"
                            android:padding="2.5dp"
                            app:cardBackgroundColor="@color/gray300"
                            app:cardCornerRadius="5dp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>